# internal/delivery/api/docs/carrier/carrier_docs.go
@@ -441,6 +441,41 @@ const docTemplatecarrier = `{
                 }
             }
         },
+        "/auth/pkce": {
+            "post": {
+                "description": "Generate PKCE",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Generate PKCE",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/command.GeneratePKCEResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/outerr.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/outerr.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "description": "Exchange a valid refresh token for a new token pair",
@@ -1431,6 +1466,17 @@ const docTemplatecarrier = `{
                 }
             }
         },
+        "command.GeneratePKCEResponse": {
+            "type": "object",
+            "properties": {
+                "code_challenge": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                }
+            }
+        },
         "command.LoginRequest": {
             "type": "object",
             "properties": {
@@ -1552,7 +1598,8 @@ const docTemplatecarrier = `{
             "type": "object",
             "required": [
                 "code",
-                "redirect_uri"
+                "redirect_uri",
+                "state"
             ],
             "properties": {
                 "code": {
@@ -1562,6 +1609,9 @@ const docTemplatecarrier = `{
                     "type": "string"
                 },
                 "role": {
+                    "type": "string"
+                },
+                "state": {
                     "type": "string"
                 }
             }
