# internal/delivery/api/docs/carrier/carrier_swagger.json
@@ -432,6 +432,41 @@
                 }
             }
         },
+        "/auth/pkce": {
+            "post": {
+                "description": "Generate PKCE",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Generate PKCE",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/command.GeneratePKCEResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/outerr.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/outerr.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "description": "Exchange a valid refresh token for a new token pair",
@@ -1422,6 +1457,17 @@
                 }
             }
         },
+        "command.GeneratePKCEResponse": {
+            "type": "object",
+            "properties": {
+                "code_challenge": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                }
+            }
+        },
         "command.LoginRequest": {
             "type": "object",
             "properties": {
@@ -1543,7 +1589,8 @@
             "type": "object",
             "required": [
                 "code",
-                "redirect_uri"
+                "redirect_uri",
+                "state"
             ],
             "properties": {
                 "code": {
@@ -1553,6 +1600,9 @@
                     "type": "string"
                 },
                 "role": {
+                    "type": "string"
+                },
+                "state": {
                     "type": "string"
                 }
             }
