# internal/delivery/api/handlers/common/routes.go
@@ -23,6 +23,7 @@ func RegisterRoutes(r chi.Router, opts *delivery.HandlerOptions) {
 	r.Post("/auth/apple", authH.AppleSignIn())
 	r.Post("/auth/telegram", authH.TelegramSignIn())
 	r.Post("/auth/telegram/callback", authH.TelegramOAuth())
+	r.Post("/auth/pkce", authH.GeneratePKCE())
 
 	// Common protected routes (any authenticated user)
 	r.Group(func(r chi.Router) {
